# acalyle

./: .eslintrc.js  .gitignore  .markuplintrc  .oxlintrc.json  .prettierignore  .prettierrc  .stylelintrc.js  Cargo.toml  README.md  biome.json  cspell-custom-words.txt  cspell.json  eslint.config.js  graphql.config.toml  lefthook.toml  oxlint_jsonc_schema.json  oxlintrc-base.jsonc  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  relay.config.js  renovate.json  tsconfig.config.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  turbo.json
.github/workflows/: check-graphql-schema.yml  ci.yml
apps/client/: .oxlintrc.json  biome.json  chromatic.config.json  codegen.ts  eslint.config.js  graphql.config.ts  index.html  package.json  tsconfig.config.json  tsconfig.json  tsconfig.main.json  tsconfig.test.json  uno.config.ts  vite.config.ts
apps/client/.storybook/: main.ts  preview.tsx
apps/client/src/: index.ts  main.tsx
apps/server/: Cargo.toml  package.json  schema.graphql
apps/server/src/: lib.rs  query.rs  resource.rs  server.rs
apps/server/src/db/: book.rs  init.rs  loader.rs  memo.rs  mod.rs  query.rs  util.rs
apps/server/src/graphql/: book.rs  cursor.rs  memo.rs  mod.rs  node.rs  schema.rs
apps/tauri/: index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/src/: App.tsx  env.d.ts  macaron.d.ts  main.ts  root.tsx
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
config/: tsconfig.base.json  tsconfig.node.json  tsconfig.web.json
data/: schema.graphql
main/: build.js  package.json  prebuild.js  tsconfig.json  tsup.config.ts
main/src/: context.ts  hmr-node.ts  ipc.ts  main.ts  scalar.ts  schema.ts  serve.ts  server.ts  tag.ts  types.d.ts
main/src/gql-schema/: book-thumbnail.ts  book.ts  context.ts  index.ts  memo.ts  node.ts  resource.ts  scalar.ts  (+3 more)
preload/: tsconfig.json
preload/src/: cannels.ts  preload.ts  types.d.ts
prisma/: schema.prisma
renderer/: .eslintrc.js  index.html  package.json  relay.config.js  setup-test.ts  style.css  tsconfig.json  types.d.ts  vite-plugin-html-replace.ts  vite.config.ts
renderer/src/: acalyle.ts  column-split.ts  index.ts  root.tsx  router-react.tsx  router.ts  types.d.ts
scripts/: build.ts  create-codecov_yml.js
(+523 files in other folders)
