[package]
name = "acalyle-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.8", features = ["chrono", "dataloader"] }
chrono = "0.4.24"
rand = "0.8.5"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
uuid = { version = "1.3.3", features = ["v4"] }
