[package]
name = "acalyle-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.8", features = ["chrono", "dataloader"] }
async-graphql-axum = "5.0.9"
axum = "0.6.18"
base64 = "0.21.2"
chrono = "0.4.24"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.2"
serde = "1.0.163"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.38.2", features = ["macros", "rt"] }
tokio-util = "0.7.8"
uuid = { version = "1.3.3", features = ["v4"] }
